# life_assitant

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  build-and-push.bat  compose.dev.yml  compose.ip.yml  compose.override.yml  compose.yml  start-backend.bat
.cursor/rules/: docker-devops.mdc  frontend-eslint.mdc  powershell-env.mdc
.cursor/skills/dev-restart/: SKILL.md
.github/workflows/: ci.yml
admin_front/vue3-element-admin/: Dockerfile
backend/: .dockerignore  Dockerfile  entrypoint.sh
backend/lifeassistant/: .gitignore  README.md  lombok.config  pom.xml
backend/lifeassistant/lifeassistant-common/: pom.xml
backend/lifeassistant/lifeassistant-server/: pom.xml  start-backend.ps1
backend/lifeassistant/lifeassistant-system/: pom.xml
backend/nginx/: Dockerfile  nginx.conf  nginx.dev.conf
docs/: development-guide.md  step-by-step-guide.md
docs/superpowers/plans/: 2026-06-21-docker-production-deployment.md  2026-06-23-monitoring-deployment.md  2026-06-24-logout-redirect-fix.md  2026-06-24-todo-auth-refactor.md  2026-06-24-todo-feature.md  2026-06-26-mcp-integration.md  2026-06-28-mcp-agent-deployment-plan.md  2026-06-29-pagination-ui-fix.md  2026-07-09-shared-media.md  2026-07-13-partner-dashboard-plan.md
front/vue3-vant-mobile/: Dockerfile  nginx.conf  package.json  vite.config.ts
front/vue3-vant-mobile/src/: App.vue
python/agent/: .dockerignore  Dockerfile  pyproject.toml
python/agent/src/life_assistant_agent/: client.py  server.py
python/agent/src/life_assistant_agent/tools/: checkin.py  points.py  record.py  todo.py
(+292 files in other folders)
